fix previous stage